complete Oauth flow , optimize mongoose schema

--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.9.0",
+    "connect-redis": "^8.0.3",
+    "dotenv": "^16.5.0",
+    "express-session": "^1.18.1",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
@@ -41,7 +47,9 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
